# laserstream-sdk

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
bench/: README.md  laserstream.js  package.json
go/: README.md  go.mod  go.sum  laserstream.go  laserstream_test.go  preprocessed.go
go/examples/: account-sub.go  accounts-data-slice-sub.go  block-meta-sub.go  block-sub.go  channel-options-example.go  context-sub.go  entry-sub.go  preprocessed-transaction-sub.go  slot-sub.go  stream-write-example.go  transaction-status-sub.go  transaction-sub.go
go/proto/: geyser.pb.go  geyser_grpc.pb.go  solana-storage.pb.go
go/test/: block-integrity-test.go  channel-options-demo.go  chaos-proxy.go  internal-slot-filter-test.go  reconnect-persistence-verify.go  stream-write-demo.go  transaction-integrity-test.go
javascript/: .gitignore  .npmignore  Cargo.toml  README.md  client.d.ts  client.js  cuckoo.d.ts  cuckoo.js  index.d.ts  index.js  package-lock.json  package.json  proto-decoder.js  test-native-grpc.sh  test-single-sub.ts  tsconfig.json
javascript/.cargo/: config.toml
javascript/.claude/: settings.local.json
javascript/.github/workflows/: ci.yml
javascript/examples/: account-sub.ts  accounts-data-slice-sub.ts  basic-usage.ts  block-meta-sub.ts  block-sub.ts  channel-options-example.ts  compression-example.ts  compression-zstd-example.ts  cuckoo-account-sub.ts  cuckoo-transaction-sub.ts  entry-sub.ts  grpc-native-clean.js  grpc-native.js  grpc-options-comprehensive.ts  multithread.js  parallel-subs.ts  preprocessed-transaction-sub.ts  shared-buffer-workers.js  slot-sub.ts  stream-write-example.ts  token-accounts-sub.ts  transaction-status-sub.ts  transaction-sub.ts  worker-threads.js
javascript/laserstream-napi/: .env.example  Cargo.toml  README.md  build.rs  compare-performance.js  index.d.ts  index.js  install.sh  laserstream-napi.node  package.json  plan.md  setup.sh  test-bandwidth.js  test-basic.js  test-simple.js
javascript/laserstream-napi/src/: buffer_pool.rs  client.rs  lib.rs  metrics.rs  proto.rs  simple_lib.rs  stream.rs
javascript/laserstream-napi/test/: bandwidth.js  benchmark.js
javascript/napi-src/: client.rs  lib.rs  proto.rs  stream.rs
javascript/performance/: core-performance-test.ts  custom-grpc-bandwidth-test.ts  grpc.js  grpc.ts  latency-comparison.ts  napi-bandwidth-test.ts  napi-grpc-performance-test.ts  napi-vs-yellowstone-bandwidth.ts  pump-raydium-performance-test.ts  pure-rust-bandwidth-test.ts  rust-bandwidth-test.ts  simple-bandwidth-test.ts  slot-performance-test.ts  token-performance-test.ts  vote-performance-test.ts  yellowstone-direct-test.ts
javascript/proto/: geyser.proto
javascript/src/: client.ts
javascript/test/: account-integrity-test.ts  block-integrity-test.ts  channel-options-test.ts  chaosProxyConfigurable.ts  cuckoo-differential.test.js  cuckoo-e2e-thorough.js  cuckoo-e2e.js  cuckoo-vectors.test.js  data-slice-overlap-bug.test.ts  internal-slot-filter-test.ts  laserstreamChaosProxy.ts  multiple-writes-reconnection.test.ts  reconnect-replay-verify.ts  stream-write-test.ts  subscription-modification-persistence.test.ts  subscription-replacement-persistence.test.ts  transaction-integrity-test.ts
javascript/test/fixtures/: cuckoo-differential.json  cuckoo-vectors.json
rust/: .gitignore  Cargo.toml  README.md
rust/examples/: account_sub.rs  accounts_data_slice_sub.rs  basic_usage.rs  block_meta_sub.rs  block_sub.rs  channel-options-example.rs  compression-advanced.rs  compression-example.rs  cuckoo_account_filter.rs  cuckoo_transaction_filter.rs  entry_sub.rs  preprocessed_transaction_sub.rs  slot_sub.rs  stream_write_example.rs  token_accounts_filter.rs  transaction_status_sub.rs  transaction_sub.rs  verify_no_internal_filters.rs
rust/src/: client.rs  config.rs  error.rs  lib.rs
rust/test/: account_integrity.rs  block_integrity.rs  subscription_replacement_persistence.rs  transaction_integrity.rs
scripts/bandwidth/: Cargo.toml
scripts/bandwidth/src/: main.rs
