[package]
name = "helius-laserstream"
version = "0.3.0"
edition = "2021"
authors = ["Helius <support@helius.xyz>"]
description = "Rust client for Helius LaserStream gRPC with robust reconnection and slot tracking"
license = "MIT"
repository = "https://github.com/helius-labs/laserstream"
keywords = ["solana", "laserstream", "yellowstone", "grpc", "blockchain"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# token_accounts (ATA) filter field #30 is not yet on a published core-proto
# release; pull proto + client straight from the Helius yellowstone-grpc fork
# branch. `package = ...` keeps the `laserstream_core_proto` / `_client` import
# paths intact. Retarget to the published crates once field #30 ships there.
laserstream-core-proto = { git = "https://github.com/helius-labs/yellowstone-grpc", branch = "feat/token-accounts-filter-field-v9.0.1", package = "yellowstone-grpc-proto", default-features = false, features = ["tonic", "tonic-compression"] }
laserstream-core-client = { git = "https://github.com/helius-labs/yellowstone-grpc", branch = "feat/token-accounts-filter-field-v9.0.1", package = "yellowstone-grpc-client" }
tonic = { version = "0.12.1", features = ["transport", "tls", "zstd", "gzip"] }
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-stream = "0.1"
bs58 = "0.5"
thiserror = "1.0"
futures-util = { version = "0.3", features = ["sink"] }
futures-channel = "0.3"
futures = "0.3"
async-stream = "0.3"
rand = "0.8"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
reqwest = { version = "0.12", features = ["json", "gzip", "rustls-tls"] }
sha2 = "0.10"
# Pubkey type for the cuckoo CompressedAccountFilterSet API; only pulled in with the
# `cuckoo` feature. Pinned to 2.x to match the yellowstone-grpc fork branch's
# `convert` feature (solana-pubkey 2.0), so the re-exported Pubkey type unifies with
# `CompressedAccountFilterSet::contains`. Bump back to 3.0 when retargeting to the
# published core-proto release (which pins solana-pubkey 3.0).
solana-pubkey = { version = "2.0", optional = true }

[features]
# `cuckoo` (compressed account filters) is on by default. It enables the proto
# `convert` feature + solana-pubkey, which are heavier deps; opt out with
# `default-features = false` if you don't need the filter builder.
default = ["cuckoo"]
cuckoo = ["laserstream-core-proto/convert", "dep:solana-pubkey"]

[dev-dependencies]
dotenv = "0.15"

[[example]]
name = "cuckoo_account_filter"
path = "examples/cuckoo_account_filter.rs"
required-features = ["cuckoo"]

[build-dependencies]
tonic-build = "0.10.2"

[[bin]]
name = "account_integrity_test"
path = "test/account_integrity.rs"

[[bin]]
name = "transaction_integrity_test"
path = "test/transaction_integrity.rs"

[[bin]]
name = "block_integrity_test"
path = "test/block_integrity.rs"

[[bin]]
name = "subscription_replacement_persistence_test"
path = "test/subscription_replacement_persistence.rs"
