[package]
name = "laserstream-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["async", "tokio_rt"] }
napi-derive = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.11", features = ["transport", "tls"] }
prost = "0.12"
prost-types = "0.12"
bytes = "1"
futures = "0.3"
parking_lot = "0.12"
dashmap = "5"
crossbeam-channel = "0.5"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
napi-build = "2"
tonic-build = "0.11"

[profile.release]
lto = true
opt-level = 3

[package.metadata.napi]
name = "laserstream-napi"